change font size for result notification to avoid multiple lines on mobile phone screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -125,7 +125,7 @@ footer {
         font-size: 75%;
     }
     .result-notification > h2 {
-        font-size: 150%;
+        font-size: 130%;
     }
     .score-board {
         padding: 3% 2%;
